<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>il.ac.bgu.cs.bp</groupId>
    <artifactId>BPjsLeaderFollower</artifactId>
    <version>0.5-DEV</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <exec.mainClass>il.ac.bgu.cs.bp.leaderfollower.BPJsRobotControl</exec.mainClass>
    </properties>
    
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    
    <dependencies>
        <dependency>
            <groupId>com.github.bthink-bgu</groupId>
            <artifactId>BPjs</artifactId>
            <version>0.9.6</version>
        </dependency>
        <dependency>
            <groupId>com.github.bThink-BGU.BPjs-Context</groupId>
            <artifactId>BPjs-Context-Core</artifactId>
            <version>master-SNAPSHOT</version>
        </dependency>
    </dependencies>
    
    <profiles>
        <profile>
            <!-- Making uber jar for easy execution. -->
            <id>uber-jar</id>
            <build>
                <finalName>BPjs-${project.version}.uber</finalName>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>2.4.1</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <transformers>
                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" />
                                    </transformers>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>